--- a/flutter_ads_native/android/src/main/res/drawable/ripple_blue_button.xml
+++ b/flutter_ads_native/android/src/main/res/drawable/ripple_blue_button.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#332563EB">
-    <item>
-        <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="#2563EB" />
-            <corners android:radius="50dp" />
-        </shape>
-    </item>
-</ripple>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#2563EB" />
+
+    <corners android:radius="50dp" />
+</shape>
 
