--- a/flutter_ads_native/android/src/main/res/layout/native_ad_card.xml
+++ b/flutter_ads_native/android/src/main/res/layout/native_ad_card.xml
@@ -83,6 +83,7 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:minWidth="0dp"
+                        android:fontFamily="@font/inter_variable_font"
                         android:text="Giáng Sinh Diệu Kỳ"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
@@ -145,6 +146,7 @@
                     android:lineSpacingExtra="0dp"
                     android:lineSpacingMultiplier="1.0"
                     android:maxLines="2"
+                    android:fontFamily="@font/inter_variable_font"
                     android:text="Khám phá kho tàng đồ chơi và quà tặng độc đáo cho bé yêu mùa lễ hội này."
                     android:textColor="#9CA3AF"
                     android:textSize="11sp" />
@@ -178,8 +180,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Install now"
-                            android:textColor="#FFFFFF"
-                            android:textSize="10sp"
+                            android:textColor="#000000"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </FrameLayout>
