--- a/flutter_ads_native/android/src/main/res/layout/native_ad_card_banner.xml
+++ b/flutter_ads_native/android/src/main/res/layout/native_ad_card_banner.xml
@@ -37,24 +37,20 @@
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="12dp">
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="12dp"
+            android:orientation="horizontal">
 
             <!-- Image Container -->
-            <FrameLayout
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+
+            <ImageView
+                android:id="@+id/adIcon"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_marginEnd="12dp"
                 android:background="@drawable/image_container_gray"
-                android:padding="0dp">
-
-                <ImageView
-                    android:id="@+id/adIcon"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:contentDescription="Ad Image"
-                    android:scaleType="centerCrop" />
-            </FrameLayout>
+                android:contentDescription="Ad Image"
+                android:scaleType="centerCrop" />
 
             <!-- Content Container -->
             <LinearLayout
@@ -81,6 +77,7 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:minWidth="0dp"
+                        android:fontFamily="@font/inter_variable_font"
                         android:text="Giáng Sinh Diệu Kỳ"
                         android:textColor="#FFFFFF"
                         android:textSize="14sp"
@@ -142,6 +139,7 @@
                     android:lineSpacingExtra="0dp"
                     android:lineSpacingMultiplier="1.0"
                     android:maxLines="1"
+                    android:fontFamily="@font/inter_variable_font"
                     android:text="Khám phá kho tàng đồ chơi và quà tặng độc đáo cho bé yêu mùa lễ hội này."
                     android:textColor="#9CA3AF"
                     android:textSize="11sp" />
