--- a/flutter_ads_native/android/src/main/res/layout/native_ad_card_full_banner.xml
+++ b/flutter_ads_native/android/src/main/res/layout/native_ad_card_full_banner.xml
@@ -68,6 +68,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:fontFamily="@font/inter_variable_font"
                             android:id="@+id/adTitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -81,6 +82,7 @@
 
 
                     <TextView
+                        android:fontFamily="@font/inter_variable_font"
                         android:id="@+id/adDescription"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -167,11 +169,12 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:fontFamily="@font/inter_variable_font"
                                 android:id="@+id/install_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Start now"
-                                android:textColor="#FFFFFF"
+                                android:textColor="#000000"
                                 android:textSize="14sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
