--- a/flutter_ads_native/android/src/main/res/layout/native_ad_full_screen.xml
+++ b/flutter_ads_native/android/src/main/res/layout/native_ad_full_screen.xml
@@ -91,8 +91,8 @@
 
                     <!-- Left: Icon/Logo Container -->
                     <FrameLayout
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_marginEnd="8dp"
                         android:background="@drawable/image_container_gray"
                         android:padding="2dp">
@@ -123,6 +123,7 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:fontFamily="@font/inter_variable_font"
                                 android:id="@+id/adTitle"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
@@ -186,6 +187,7 @@
 
                         <!-- Description -->
                         <TextView
+                            android:fontFamily="@font/inter_variable_font"
                             android:id="@+id/adDescription"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -205,10 +207,7 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/ripple_blue_button"
                     android:minWidth="110dp"
-                    android:paddingStart="18dp"
-                    android:paddingTop="10dp"
-                    android:paddingEnd="18dp"
-                    android:paddingBottom="10dp">
+                    android:paddingVertical="12dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -218,12 +217,13 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:fontFamily="@font/inter_variable_font"
                             android:id="@+id/install_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Start now"
-                            android:textColor="#FFFFFF"
-                            android:textSize="13sp"
+                            android:textColor="#000000"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </FrameLayout>
