show inter after splash, edit native ui

--- a/flutter_ads_native/android/src/main/res/layout/native_ad_card_large.xml
+++ b/flutter_ads_native/android/src/main/res/layout/native_ad_card_large.xml
@@ -2,7 +2,8 @@
 <com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="130dp">
+    android:layout_height="130dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <FrameLayout
@@ -38,21 +39,22 @@
                 android:paddingVertical="5dp">
 
                 <!-- Image Container -->
-                <FrameLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="65dp"
                     android:layout_height="65dp"
                     android:layout_marginEnd="12dp"
-                    android:background="@drawable/image_container_gray"
-                    android:padding="0dp">
+                    app:cardBackgroundColor="#111827"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="0dp">
 
                     <ImageView
                         android:id="@+id/adIcon"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:contentDescription="Ad Image"
+                        android:contentDescription="Ad Icon"
                         android:scaleType="centerCrop" />
-                </FrameLayout>
 
+                </androidx.cardview.widget.CardView>
                 <!-- Content Container -->
                 <LinearLayout
                     android:layout_width="0dp"
