--- a/flutter_ads_native/android/src/main/res/layout/native_ad_card_full_banner.xml
+++ b/flutter_ads_native/android/src/main/res/layout/native_ad_card_full_banner.xml
@@ -2,7 +2,8 @@
 <com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:id="@+id/frmNativeRoot"
@@ -36,21 +37,23 @@
                 android:padding="8dp">
 
                 <!-- Image Container -->
-                <FrameLayout
-                    android:layout_gravity="center"
+                <androidx.cardview.widget.CardView
                     android:layout_width="48dp"
+                    android:layout_gravity="center"
                     android:layout_height="48dp"
                     android:layout_marginEnd="8dp"
-                    android:background="@drawable/image_container_gray"
-                    android:padding="0dp">
+                    app:cardBackgroundColor="#111827"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="0dp">
 
                     <ImageView
                         android:id="@+id/adIcon"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:contentDescription="Ad Image"
+                        android:contentDescription="Ad Icon"
                         android:scaleType="centerCrop" />
-                </FrameLayout>
+
+                </androidx.cardview.widget.CardView>
 
                 <LinearLayout
                     android:layout_width="0dp"
